# batting_robot

./: CMakeLists.txt  README.md  package.xml
launch/: batting.launch  deciding.launch
scripts/: README.md  bat_control.cpp  bat_control.py  bat_controll.py  batting.py  color.py  feature_bat_contorol.py  grab.py  input_blue.py  input_green.py  ready.py  search_bat.py  vision.py
