<?xml version="1.0"?>
<package format="2">
  <name>batting_robot</name>
  <version>0.0.0</version>
  <description>The batting_robot package</description>

  <maintainer email="s21c1103bk@gmail.com">kenzo-fujisaki</maintainer>


  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
